argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-argo-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Ensure no SSL redirection occurs
    nginx.ingress.kubernetes.io/rewrite-target: "/"    # Adjust the rewrite target if needed
    nginx.ingress.kubernetes.io/protocol: "http"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.kubesimplify.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
